--- a/tests/sys/fs/fusefs/Makefile
+++ b/tests/sys/fs/fusefs/Makefile
@@ -9,48 +9,48 @@ TESTSDIR=	${TESTSBASE}/sys/fs/fusefs
 # We could simply link all of these files into a single executable.  But since
 # Kyua treats googletest programs as plain tests, it's better to separate them
 # out, so we get more granular reporting.
-GTESTS+=	access
-GTESTS+=	allow_other
-GTESTS+=	bmap
-GTESTS+=	cache
-GTESTS+=	copy_file_range
-GTESTS+=	create
-GTESTS+=	default_permissions
-GTESTS+=	default_permissions_privileged
-GTESTS+=	destroy
-GTESTS+=	dev_fuse_poll
-GTESTS+=	fifo
-GTESTS+=	flush
-GTESTS+=	forget
-GTESTS+=	fsync
-GTESTS+=	fsyncdir
-GTESTS+=	getattr
-GTESTS+=	interrupt
-GTESTS+=	io
-GTESTS+=	link
-GTESTS+=	locks
+#GTESTS+=	access
+#GTESTS+=	allow_other
+#GTESTS+=	bmap
+#GTESTS+=	cache
+#GTESTS+=	copy_file_range
+#GTESTS+=	create
+#GTESTS+=	default_permissions
+#GTESTS+=	default_permissions_privileged
+#GTESTS+=	destroy
+#GTESTS+=	dev_fuse_poll
+#GTESTS+=	fifo
+#GTESTS+=	flush
+#GTESTS+=	forget
+#GTESTS+=	fsync
+#GTESTS+=	fsyncdir
+#GTESTS+=	getattr
+#GTESTS+=	interrupt
+#GTESTS+=	io
+#GTESTS+=	link
+#GTESTS+=	locks
 GTESTS+=	lookup
-GTESTS+=	lseek
-GTESTS+=	mkdir
-GTESTS+=	mknod
-GTESTS+=	mount
-GTESTS+=	nfs
-GTESTS+=	notify
-GTESTS+=	open
-GTESTS+=	opendir
-GTESTS+=	read
-GTESTS+=	readdir
-GTESTS+=	readlink
-GTESTS+=	release
-GTESTS+=	releasedir
-GTESTS+=	rename
-GTESTS+=	rmdir
-GTESTS+=	setattr
-GTESTS+=	statfs
-GTESTS+=	symlink
-GTESTS+=	unlink
-GTESTS+=	write
-GTESTS+=	xattr
+#GTESTS+=	lseek
+#GTESTS+=	mkdir
+#GTESTS+=	mknod
+#GTESTS+=	mount
+#GTESTS+=	nfs
+#GTESTS+=	notify
+#GTESTS+=	open
+#GTESTS+=	opendir
+#GTESTS+=	read
+#GTESTS+=	readdir
+#GTESTS+=	readlink
+#GTESTS+=	release
+#GTESTS+=	releasedir
+#GTESTS+=	rename
+#GTESTS+=	rmdir
+#GTESTS+=	setattr
+#GTESTS+=	statfs
+#GTESTS+=	symlink
+#GTESTS+=	unlink
+#GTESTS+=	write
+#GTESTS+=	xattr
 
 .for p in ${GTESTS}
 SRCS.$p+=	${p}.cc
