WIP adding new parameterizable tests

--- a/tests/sys/fs/fusefs/Makefile
+++ b/tests/sys/fs/fusefs/Makefile
@@ -27,6 +27,7 @@ TESTSDIR=	${TESTSBASE}/sys/fs/fusefs
 #GTESTS+=	getattr
 #GTESTS+=	interrupt
 #GTESTS+=	io
+GTESTS+=	last_local_modify
 #GTESTS+=	link
 #GTESTS+=	locks
 GTESTS+=	lookup
@@ -34,7 +35,7 @@ GTESTS+=	lookup
 #GTESTS+=	mkdir
 #GTESTS+=	mknod
 #GTESTS+=	mount
-#GTESTS+=	nfs
+GTESTS+=	nfs
 #GTESTS+=	notify
 #GTESTS+=	open
 #GTESTS+=	opendir
